--- a/.github/workflows/sei.yml
+++ b/.github/workflows/sei.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: SEI Localnet Setup
 
 on:
   push:
@@ -19,24 +19,22 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: '1.22'
 
     - name: Checkout SEI Chain
-      uses: actions/checkout@v4.1.7
-      with:
-        repository: 'sei-protocol/sei-chain'
+      run: git clone https://github.com/sei-protocol/sei-chain
 
     - name: Checkout SEI Cosmos
-      uses: actions/checkout@v4.1.7
-      with:
-        repository: 'sei-protocol/sei-cosmos'
+      run: git clone https://github.com/sei-protocol/sei-cosmos
 
     - name: Checkout SEI Tendermint
-      uses: actions/checkout@v4.1.7
-      with:
-        repository: 'sei-protocol/sei-tendermint'
+      run: git clone https://github.com/sei-protocol/sei-tendermint
 
-
+    - name: Set up go mod
+      run: cd sei-chain && go mod edit -replace github.com/cosmos/cosmos-sdk=../sei-cosmos && go mod edit -replace github.com/tendermint/tendermint=../sei-tendermint
+    - name: Install SEI Chain binary
+      run: cd sei-chain && make install && cd build/generated
+    
     #- name: Build
     #  run: go build -v ./...
 
@@ -44,4 +42,4 @@ jobs:
     #  run: go test -v ./...
 
     - name: List files in workspace
-      run: ls -R
+      run: ls -al
