--- a/.github/workflows/injective.yml
+++ b/.github/workflows/injective.yml
@@ -8,6 +8,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  schedule:
+      - cron: '0 0 * * *' 
 
 jobs:
 
@@ -54,7 +56,6 @@ jobs:
            fi
          fi
          echo "LATEST_TAG=$(cat latest.txt)" >> $GITHUB_OUTPUT
-         echo "TAG_CORRECT=1" >> $GITHUB_OUTPUT # Debug only
 
     - name: Set Up Injectived Binary
       if: steps.check-tag.outputs.TAG_CORRECT == '1'
@@ -95,9 +96,11 @@ jobs:
         echo "Ready to build docker image."
 
     - name: Set up Docker Buildx
+      if: steps.check-tag.outputs.TAG_CORRECT == '1'
       uses: docker/setup-buildx-action@v3
 
     - name: Login to GitHub Container Registry
+      if: steps.check-tag.outputs.TAG_CORRECT == '1'
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
@@ -107,8 +110,11 @@ jobs:
 
 
     - name: Build and push Docker Image
+      if: steps.check-tag.outputs.TAG_CORRECT == '1'
       uses: docker/build-push-action@v5
       with:
         context: .
         push: true
-        tags: ghcr.io/archway-warp/injective-local:${{ steps.check-tag.outputs.LATEST_TAG }}
+        tags: |
+          ghcr.io/archway-warp/injective-local:latest
+          ghcr.io/archway-warp/injective-local:${{ steps.check-tag.outputs.LATEST_TAG }}
