--- a/.github/workflows/sei.yml
+++ b/.github/workflows/sei.yml
@@ -13,23 +13,83 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    outputs:
+      tag-correct: ${{ steps.check-tag.outputs.TAG_CORRECT }}
+      latest-tag: ${{ steps.check-tag.outputs.LATEST_TAG }}
+    permissions:
+      packages: write
+      contents: read
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.22'
-
     - name: Checkout SEI Chain
-      run: git clone https://github.com/sei-protocol/sei-chain
+      run: git clone https://github.com/sei-protocol/sei-chain sei/sei-chain
 
+    - name: Get cached last tag
+      id: cache-tag
+      uses: actions/cache@v4.0.2
+      with:
+       path: latest.txt 
+       key: ${{ runner.os }}-build-latest-tag
+       
+
+    - name: Check if tag has changed
+      id: check-tag
+      run: |
+         if [ "${{ steps.cache-tag.outputs.cache-hit }}" != "true" ]; then
+           echo "Cache not found. Creating latest.txt."
+           cd sei/sei-chain && git describe --tags `git rev-list --tags --max-count=1` > ../latest.txt
+           echo "TAG_CORRECT=1" >> $GITHUB_OUTPUT
+         else
+           echo "Cache found. Comparing tags."
+           cached_tag=$(cat latest.txt)
+           local_tag=$(cd sei/sei-chain && git describe --tags `git rev-list --tags --max-count=1`)
+           if [ "$cached_tag" == "$local_tag" ]; then
+             echo "Tags match. No action needed."
+             echo "TAG_CORRECT=0" >> $GITHUB_OUTPUT
+
+           else
+             echo "Tag mismatch. Node most likely updated."
+             echo $local_tag > latest.txt
+             echo "TAG_CORRECT=1" >> $GITHUB_OUTPUT
+           fi
+         fi
+         echo "LATEST_TAG=$(cat latest.txt)" >> $GITHUB_OUTPUT
+
+
+    - name: Set up Go v1.22.3
+      if: steps.check-tag.outputs.TAG_CORRECT == '1'
+      uses: actions/setup-go@v5
+      with:
+          go-version: '^1.13.1'
     
-    #- name: Build
-    #  run: go build -v ./...
+    
+    - name: Set up Docker Buildx
+      if: steps.check-tag.outputs.TAG_CORRECT == '1'
+      uses: docker/setup-buildx-action@v3
 
-    #- name: Test
-    #  run: go test -v ./...
+    - name: Login to GitHub Container Registry
+      if: steps.check-tag.outputs.TAG_CORRECT == '1'
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: List files in workspace
-      run: ls -al
+    - name: Prepare Environment
+      if: steps.check-tag.outputs.TAG_CORRECT == '1'
+      run: |
+        mv sei/setup.sh sei/sei-chain/docker/localnode/scripts
+        mv sei/run.sh sei/sei-chain/docker/localnode/scripts
+        rm sei/sei-chain/docker/localnode/Dockerfile
+        mv sei/Dockerfile sei/sei-chain/docker/localnode
+
+    - name: Build and push Docker Image
+      if: steps.check-tag.outputs.TAG_CORRECT == '1'
+      uses: docker/build-push-action@v5
+      with:
+        context: sei/sei-chain/docker/localnode
+        push: true
+        tags: |
+          ghcr.io/archway-warp/sei-local:latest
+          ghcr.io/archway-warp/sei-local:${{ steps.check-tag.outputs.LATEST_TAG }}
